--- a/ASP.Net API/CaseStudy_API/AppUI/Views/EventDetails/UpdateEvent.cshtml
+++ b/ASP.Net API/CaseStudy_API/AppUI/Views/EventDetails/UpdateEvent.cshtml
@@ -1,13 +1,18 @@
 ﻿@model AppUI.Models.EventDetails
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+@if (ViewBag.Error != null)
+{
+    <p style="color:red">@ViewBag.Error</p>
+}
+
 <html>
 <head>
     <title>Update Event</title>
 </head>
 <body>
     <h2>Update Event</h2>
-    <form asp-route="EditEvent" method="post">
+    <form asp-action="UpdateEvent" method="post">
         <input type="hidden" asp-for="EventId" />
 
         <div>
